A solution to solve score set or experiment's title is too long problem.

--- a/src/assets/layout.css
+++ b/src/assets/layout.css
@@ -23,10 +23,15 @@
   padding: 0 0 5px 0;
   border-bottom: 1px solid #ccc;
   margin: 10px 0;
+  overflow: hidden; /* Prevents layout shifting */
 }
 
 .mave-screen-title {
   flex: 0 0 auto;
+  display: block; /* Ensures the title takes up full width */
+  white-space: nowrap; /* Prevents text from wrapping */
+  overflow-x: auto; /* Horizontal scrolling */
+  max-width: 72%;
 }
 
 .mave-screen-title-controls {
